[gd_scene load_steps=5 format=3 uid="uid://b5byi6jqnrq7m"]

[ext_resource type="Script" path="res://book_icon_picker.gd" id="1_7aukh"]
[ext_resource type="Texture2D" uid="uid://bau4jkoxdunc6" path="res://icons/book1.png" id="1_rar4b"]
[ext_resource type="Texture2D" uid="uid://beyb8ciyflfsp" path="res://icons/book2.png" id="2_uq7d7"]
[ext_resource type="Texture2D" uid="uid://du1i0cf5v11jl" path="res://icons/book3.png" id="3_mbglb"]

[node name="BookIconPicker" type="CenterContainer"]
offset_right = 92.8429
offset_bottom = 100.0
pivot_offset = Vector2(46, 50)
script = ExtResource("1_7aukh")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
texture = ExtResource("1_rar4b")
expand_mode = 3
flip_h = true

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
texture = ExtResource("2_uq7d7")
expand_mode = 3
flip_h = true

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
texture = ExtResource("3_mbglb")
expand_mode = 3
flip_h = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="Timer" to="." method="update_scale"]
